# propylen

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/propylen/: __init__.py  __main__.py
src/propylen/cli/: __init__.py
src/propylen/functionality/: __init__.py
src/tempylate/: __init__.py  __main__.py
test/: cli-test-suite.py  cli_test_suite.py
